syntax = "proto3";
option go_package = "/gen";

message Metadata {
  string id = 1;
  string title = 2;
  string description = 3;
  string author = 4;
}

message VideoDetails {
  float rating = 1;
  Metadata metadata = 2;
}

service MetadataService {
  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
  rpc PutMetadata(PutMetadataRequest) returns (PutMetadataResponse);
}

message GetMetadataRequest {
  string video_id = 1;
}

message GetMetadataResponse {
  Metadata metadata = 1;
}

message PutMetadataRequest {
  string title = 2;
  string description = 3;
  string author = 4;
}

message PutMetadataResponse {
}

service RatingService {
  rpc GetAggregatedRating(GetAggregatedRatingRequest) returns (GetAggregatedRatingResponse);
  rpc PutRating(PutRatingRequest) returns (PutRatingResponse);
}

message GetAggregatedRatingRequest {
  string record_id = 1;
  string record_type = 2;
}

message GetAggregatedRatingResponse {
  double rating_value = 1;
}

message PutRatingRequest {
  string user_id = 1;
  string record_id = 2;
  string record_type = 3;
  int32 rating_value = 4;
}

message PutRatingResponse {
}

service VideoService {
  rpc GetVideoDetails(GetVideoDetailsRequest) returns (GetVideoDetailsResponse);
}

message GetVideoDetailsRequest {
  string video_id = 1;
}

message GetVideoDetailsResponse {
  VideoDetails video_details = 1;
}

